# no_annotation

./: .gitignore  README.md  pyproject.toml
no_annotation/: __main__.py  class_no_anntoation.py  for_test.txt  stirp_annotation.py
