[tool.poetry]
name = "no_annotation"
version = "1.0.0"
description = ""
authors = ["Rafal Pogorzelski <r.pogorzelsk@partner.samsung.com>"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
no_annotation = "no_annotation.__main__:main"
